# src/main/java/com/xopenapi/storage/model/QCloudCredentialsParams.java
@@ -1,0 +1,127 @@
+/*
+ * storage open api
+ * storage open api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.xopenapi.storage.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.io.IOException;
+
+/**
+ * 腾讯云计算上传凭证参数
+ */
+@ApiModel(description = "腾讯云计算上传凭证参数")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2020-12-05T10:51:06.718Z[GMT]")
+public class QCloudCredentialsParams {
+  public static final String SERIALIZED_NAME_REGION = "region";
+  @SerializedName(SERIALIZED_NAME_REGION)
+  private String region;
+
+  public static final String SERIALIZED_NAME_BUCKET = "bucket";
+  @SerializedName(SERIALIZED_NAME_BUCKET)
+  private String bucket;
+
+
+  public QCloudCredentialsParams region(String region) {
+    
+    this.region = region;
+    return this;
+  }
+
+   /**
+   * 存储桶所在区域，如：ap-guangzhou
+   * @return region
+  **/
+  @ApiModelProperty(required = true, value = "存储桶所在区域，如：ap-guangzhou")
+
+  public String getRegion() {
+    return region;
+  }
+
+
+  public void setRegion(String region) {
+    this.region = region;
+  }
+
+
+  public QCloudCredentialsParams bucket(String bucket) {
+    
+    this.bucket = bucket;
+    return this;
+  }
+
+   /**
+   * 存储桶名称
+   * @return bucket
+  **/
+  @ApiModelProperty(required = true, value = "存储桶名称")
+
+  public String getBucket() {
+    return bucket;
+  }
+
+
+  public void setBucket(String bucket) {
+    this.bucket = bucket;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    QCloudCredentialsParams qcloudCredentialsParams = (QCloudCredentialsParams) o;
+    return Objects.equals(this.region, qcloudCredentialsParams.region) &&
+        Objects.equals(this.bucket, qcloudCredentialsParams.bucket);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(region, bucket);
+  }
+
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class QCloudCredentialsParams {\n");
+    sb.append("    region: ").append(toIndentedString(region)).append("\n");
+    sb.append("    bucket: ").append(toIndentedString(bucket)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
